# docs/swagger.json
@@ -357,7 +357,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/app.User"
+                            "$ref": "#/definitions/app.CreateUserInput"
                         }
                     }
                 ],
@@ -750,7 +750,32 @@
     },
     "definitions": {
         "app.AddUserSegmentInput": {
-            "type": "object"
+            "type": "object",
+            "required": [
+                "segments"
+            ],
+            "properties": {
+                "segments": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                }
+            }
+        },
+        "app.CreateUserInput": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "segments": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                }
+            }
         },
         "app.Segment": {
             "type": "object",
@@ -764,10 +789,18 @@
             }
         },
         "app.UpdateUserInput": {
-            "type": "object"
-        },
-        "app.User": {
-            "type": "object"
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "segments": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                }
+            }
         },
         "handler.errorResponse": {
             "type": "object",
